; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_node.c_node_bootreason.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_node.c_node_bootreason.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rst_info = type { i64, i64, i64, i64, i64, i64, i64 }

@REASON_EXCEPTION_RST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @node_bootreason to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @node_bootreason(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.rst_info*, align 8
  %4 = alloca [8 x i64], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %7 = call %struct.rst_info* (...) @system_get_rst_info()
  store %struct.rst_info* %7, %struct.rst_info** %3, align 8
  %8 = getelementptr inbounds [8 x i64], [8 x i64]* %4, i64 0, i64 0
  %9 = call i64 (...) @rtc_get_reset_reason()
  store i64 %9, i64* %8, align 8
  %10 = getelementptr inbounds i64, i64* %8, i64 1
  %11 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %12 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %10, align 8
  %14 = getelementptr inbounds i64, i64* %10, i64 1
  %15 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %16 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %14, align 8
  %18 = getelementptr inbounds i64, i64* %14, i64 1
  %19 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %20 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  store i64 %21, i64* %18, align 8
  %22 = getelementptr inbounds i64, i64* %18, i64 1
  %23 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %24 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %23, i32 0, i32 3
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %22, align 8
  %26 = getelementptr inbounds i64, i64* %22, i64 1
  %27 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %28 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %27, i32 0, i32 4
  %29 = load i64, i64* %28, align 8
  store i64 %29, i64* %26, align 8
  %30 = getelementptr inbounds i64, i64* %26, i64 1
  %31 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %32 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %31, i32 0, i32 5
  %33 = load i64, i64* %32, align 8
  store i64 %33, i64* %30, align 8
  %34 = getelementptr inbounds i64, i64* %30, i64 1
  %35 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %36 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %35, i32 0, i32 6
  %37 = load i64, i64* %36, align 8
  store i64 %37, i64* %34, align 8
  %38 = load %struct.rst_info*, %struct.rst_info** %3, align 8
  %39 = getelementptr inbounds %struct.rst_info, %struct.rst_info* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @REASON_EXCEPTION_RST, align 8
  %42 = icmp ne i64 %40, %41
  %43 = zext i1 %42 to i64
  %44 = select i1 %42, i32 2, i32 8
  store i32 %44, i32* %6, align 4
  store i32 0, i32* %5, align 4
  br label %45

45:                                               ; preds = %56, %1
  %46 = load i32, i32* %5, align 4
  %47 = load i32, i32* %6, align 4
  %48 = icmp slt i32 %46, %47
  br i1 %48, label %49, label %59

49:                                               ; preds = %45
  %50 = load i32*, i32** %2, align 8
  %51 = load i32, i32* %5, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds [8 x i64], [8 x i64]* %4, i64 0, i64 %52
  %54 = load i64, i64* %53, align 8
  %55 = call i32 @lua_pushinteger(i32* %50, i64 %54)
  br label %56

56:                                               ; preds = %49
  %57 = load i32, i32* %5, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %5, align 4
  br label %45

59:                                               ; preds = %45
  %60 = load i32, i32* %6, align 4
  ret i32 %60
}

declare dso_local %struct.rst_info* @system_get_rst_info(...) #1

declare dso_local i64 @rtc_get_reset_reason(...) #1

declare dso_local i32 @lua_pushinteger(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
